hphp/hack/test/typecheck/inout/bad_inout_hint_call1.php
<?hh

function foo((function(inout int): void) $f): void {}

function test(): void {
  foo(
    $v ==> {
    },
  );
}
